# ffmpeg-cpp

./: .gitignore
source/ffmpeg-cpp/: CMakeLists.txt
source/ffmpeg-cpp/encode_video/: encode_video.cpp
source/ffmpeg-cpp/ffmpeg-cpp/: AudioFormatConverter.cpp  AudioFormatConverter.h  CMakeLists.txt  CodecDeducer.cpp  CodecDeducer.h  ConvertedAudioProcessor.h  FFmpegException.cpp  FFmpegException.h  FrameContainer.cpp  FrameContainer.h  OpenCodec.cpp  OpenCodec.h  VideoFormatConverter.cpp  VideoFormatConverter.h  ffmpeg.h  ffmpegcpp.h  std.h
source/ffmpeg-cpp/ffmpeg-cpp/Codecs/: AudioCodec.cpp  AudioCodec.h  Codec.cpp  Codec.h  JPGCodec.cpp  JPGCodec.h  PNGCodec.cpp  PNGCodec.h  VP9Codec.cpp  VP9Codec.h  VideoCodec.cpp  VideoCodec.h
source/ffmpeg-cpp/ffmpeg-cpp/Demuxing/: AudioInputStream.cpp  AudioInputStream.h  InputStream.cpp  InputStream.h  StreamData.h  VideoInputStream.cpp  VideoInputStream.h
source/ffmpeg-cpp/ffmpeg-cpp/Frame Sinks/: AudioEncoder.cpp  AudioEncoder.h  AudioFilter.h  FrameSinkStream.cpp  FrameWriter.h  OneInputFrameSink.h  VideoEncoder.cpp  VideoFilterInput.cpp  VideoFrameSink.h
source/ffmpeg-cpp/ffmpeg-cpp/Frame_Sinks/: AudioEncoder.h  AudioFrameSink.h  Filter.cpp  Filter.h  FrameSink.h  FrameSinkStream.h  OneInputFrameSink.cpp  VideoEncoder.h  VideoFilterInput.h
source/ffmpeg-cpp/ffmpeg-cpp/Info/: AudioStreamInfo.h  ContainerInfo.h  VideoStreamInfo.h
source/ffmpeg-cpp/ffmpeg-cpp/Muxing/: AudioOutputStream.cpp  AudioOutputStream.h  Muxer.cpp  Muxer.h  OutputStream.cpp  OutputStream.h  VideoOutputStream.cpp  VideoOutputStream.h
source/ffmpeg-cpp/ffmpeg-cpp/Overlaing/: VideoOverlay.cpp  VideoOverlay.h  VideoOverlayAdapter.h
source/ffmpeg-cpp/ffmpeg-cpp/Sources/: Demuxer.cpp  Demuxer.h  EncodedFileSource.cpp  EncodedFileSource.h  InputSource.h  RawAudioDataSource.cpp  RawAudioDataSource.h  RawAudioFileSource.cpp  RawAudioFileSource.h  RawVideoDataSource.cpp  RawVideoDataSource.h  RawVideoFileSource.cpp  RawVideoFileSource.h
source/ffmpeg-cpp/ffmpeg-cpp/codecs/: H264NVEncCodec.cpp  H264NVEncCodec.h  H265NVEncCodec.cpp  H265NVEncCodec.h
source/ffmpeg-cpp/filtering_audio/: filtering_audio.cpp
source/ffmpeg-cpp/filtering_video/: filtering_video.cpp
source/ffmpeg-cpp/print_info/: print_info.cpp
source/ffmpeg-cpp/remuxing/: remuxing.cpp
source/ffmpeg-cpp/simple_interface/: SimpleInterface.cpp  SimpleInterface.h  dllmain.cpp
source/ffmpeg-cpp/simple_interface_demo/: example.cpp
